maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
      if (al=0){
            ^